force-app/main/default/objects/Signing_Appointment__c/Signing_Appointment__c.object-meta.xml
<CustomObject>
    <label>Signing Appointment</label>
    <nameField>
        <label>Signing Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signing Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>