force-app/main/default/objects/Signing_Appointment__c/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <label>Appointment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>