force-app/main/default/objects/Signing_Appointment__c/fields/Scheduled_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Signing_Date__c</fullName>
    <label>Scheduled Signing Date</label>
    <type>DateTime</type>
</CustomField>