force-app/main/default/objects/Signing_Appointment__c/fields/Signing_Address1__c.field-meta.xml
<CustomField>
    <fullName>Signing_Address1__c</fullName>
    <label>Signing Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>