force-app/main/default/objects/Signing_Appointment__c/fields/Signing_Address2__c.field-meta.xml
<CustomField>
    <fullName>Signing_Address2__c</fullName>
    <label>Signing Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>