force-app/main/default/objects/Signing_Appointment__c/fields/Signing_City__c.field-meta.xml
<CustomField>
    <fullName>Signing_City__c</fullName>
    <label>Signing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>