force-app/main/default/objects/Signing_Appointment__c/fields/Signing_State__c.field-meta.xml
<CustomField>
    <fullName>Signing_State__c</fullName>
    <label>Signing State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>