force-app/main/default/objects/Signing_Appointment__c/fields/Signing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Signing_Zip_Code__c</fullName>
    <label>Signing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>