force-app/main/default/objects/Signing_Appointment__c/fields/Title_Order__c.field-meta.xml
<CustomField>
    <fullName>Title_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Order</label>
    <referenceTo>Title_Order__c</referenceTo>
    <relationshipLabel>Signing Appointments</relationshipLabel>
    <relationshipName>Signing_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>